Стилизовал поля формы

--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
         <form class="order-form" action="#" method="get">
           <div class="order-form__section">
             <div class="order-form__title">Тип</div>
-            <div class="order-form__lines">
+            <div class="order-form__lines order-form__lines--category">
               <p class="order-form__line">
                 <input class="order-form__radio" id="interior" type="radio" name="category" value="interior" checked>
                 <label class="order-form__label order-form__label--radio" for="interior">Аксессуар для интерьера</label>
@@ -61,7 +61,7 @@
           </div>
           <div class="order-form__section">
             <div class="order-form__title">Цвет</div>
-            <div class="order-form__lines">
+            <div class="order-form__lines order-form__lines--color">
               <p class="order-form__line">
                 <input class="order-form__checkbox" id="white" type="checkbox" name="white" checked>
                 <label class="order-form__label order-form__label--checkbox" for="white">Белый</label>
@@ -90,7 +90,7 @@
           </div>
           <div class="order-form__section">
             <div class="order-form__title">ФИО</div>
-            <div class="order-form__lines">
+            <div class="order-form__lines order-form__lines--name">
               <p class="order-form__line">
                 <label class="order-form__label order-form__label--f-name" for="f-name">Имя:</label>
                 <input class="order-form__text" id="f-name" type="text" name="f-name" placeholder="Введите ваше имя*" required>
