Добавил скрипт для меню

--- a/catalog.html
+++ b/catalog.html
@@ -139,5 +139,6 @@
         <button class="to-cart__submit btn" type="submit">Добавить</button>
       </form>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
