catalog.html mobile pixelperfect

--- a/catalog.html
+++ b/catalog.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="main-header__top main-header__top--gray">
-        <div class="main-header__container no-js">
+      <div class="main-header__top main-header__top--gray no-js">
+        <div class="main-header__container">
           <a class="logo" href="index.html">
             <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
           </a>
           <button class="main-header__toggle main-header__toggle--opened" type="button">Открыть меню</button>
-          <ul class="main-nav">
+          <ul class="main-nav main-nav--closed">
             <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--catalog" href="#"><span class="main-nav__align-center main-nav__align-center--catalog">Каталог товаров</span></a>
             </li>
@@ -23,7 +23,7 @@
               <a class="main-nav__link main-nav__link--order" href="form.html"><span class="main-nav__align-center main-nav__align-center--order">Вязание на заказ</span></a>
             </li>
           </ul>
-          <ul class="user-nav">
+          <ul class="user-nav user-nav--closed">
             <li class="user-nav__item">
               <a class="user-nav__link user-nav__link--search" href="#"><span class="user-nav__align-center user-nav__align-center--search">Поиск по сайту</span></a>
             </li>
