--- a/form.html
+++ b/form.html
@@ -109,7 +109,7 @@
           </div>
           <div class="order-form__line order-form__line--small order-form__line--gray">
             <p class="order-form__inner order-form__inner--space-top">
-              <label class="order-form__caption">Тел</label>
+              <label class="order-form__caption order-form__caption--phone">Тел</label>
               <input class="order-form__text" type="tel" name="phone" placeholder="+7 ХХХ ХХ ХХ*">
             </p>
           </div>
