Добавил hover-эффекты

--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
           </a>
           <div class="catalog-item__content">
             <div class="catalog-item__info">
-              <a class="catalog-item__title">Зайчик-попрыгайчик</a>
+              <a class="catalog-item__title" href="#">Зайчик-попрыгайчик</a>
               <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
             </div>
             <div class="catalog-item__order">
@@ -63,7 +63,7 @@
           </a>
           <div class="catalog-item__content">
             <div class="catalog-item__info">
-              <a class="catalog-item__title">Корзинка для белья</a>
+              <a class="catalog-item__title" href="#">Корзинка для белья</a>
               <p class="catalog-item__description">Диаметр 15 см, высота 10 см</p>
             </div>
             <div class="catalog-item__order">
@@ -78,7 +78,7 @@
           </a>
           <div class="catalog-item__content">
             <div class="catalog-item__info">
-              <a class="catalog-item__title">Большая корзинка для игрушек</a>
+              <a class="catalog-item__title" href="#">Большая корзинка для игрушек</a>
               <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
             </div>
             <div class="catalog-item__order">
