--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="contacts__items">
           <div class="contacts__item">
             <span class="contacts__field">email:</span>
-            <a class="contacts__text" href="#">info@mimimishkashop.ru</a>
+            <a class="contacts__text contacts__text--mail" href="#">info@mimimishkashop.ru</a>
           </div>
           <div class="contacts__item">
             <span class="contacts__field">адрес:</span>
