--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,11 @@
       <div class="main-header__top main-header__top--gray no-js">
         <div class="main-header__container">
           <a class="logo" href="index.html">
-            <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img src="img/logo-mobile.svg" alt="Мишка">
+            </picture>
           </a>
           <button class="main-header__toggle main-header__toggle--opened" type="button">Открыть меню</button>
           <ul class="main-nav main-nav--closed">
@@ -44,7 +48,11 @@
       <div class="catalog__container">
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
-            <img src="img/photo-1-mobile@1x.jpg" alt="Зайчик-попрыгайчик" width="260" height="195">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-1-desktop@1x.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
+              <img src="img/photo-1-mobile@1x.jpg" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик" width="260" height="195">
+            </picture>
           </a>
           <div class="catalog-item__content">
             <div class="catalog-item__info">
@@ -59,7 +67,11 @@
         </section>
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
-            <img src="img/photo-2-mobile@1x.jpg" alt="Корзинка для белья" width="260" height="195">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-2-desktop@1x.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
+              <img src="img/photo-2-mobile@1x.jpg" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик" width="260" height="195">
+            </picture>
           </a>
           <div class="catalog-item__content">
             <div class="catalog-item__info">
@@ -74,7 +86,11 @@
         </section>
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
-            <img src="img/photo-3-mobile@1x.jpg" alt="Большая корзинка для игрушек" width="260" height="195">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-3-desktop@1x.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
+              <img src="img/photo-3-mobile@1x.jpg" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик" width="260" height="195">
+            </picture>
           </a>
           <div class="catalog-item__content">
             <div class="catalog-item__info">
@@ -104,7 +120,7 @@
     <footer class="main-footer">
       <div class="main-footer__container">
         <a class="main-footer__logo" href="index.html">
-          <img src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
+          <img src="img/logo-footer.svg" alt="Мишка" width="86" height="35">
         </a>
         <div class="social-links">
           <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
