--- a/form.html
+++ b/form.html
@@ -12,7 +12,11 @@
       <div class="main-header__top main-header__top--gray no-js">
         <div class="main-header__container">
           <a class="logo" href="index.html">
-            <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img src="img/logo-mobile.svg" alt="Мишка">
+            </picture>
           </a>
           <button class="main-header__toggle main-header__toggle--opened" type="button">Открыть меню</button>
           <ul class="main-nav main-nav--closed">
@@ -131,7 +135,7 @@
     <footer class="main-footer main-footer--tall">
       <div class="main-footer__container">
         <a class="main-footer__logo" href="index.html">
-          <img src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
+          <img src="img/logo-footer.svg" alt="Мишка" width="86" height="35">
         </a>
         <div class="social-links">
           <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
