--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <title>Вязание на заказ</title>
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header main-header--zigzag">
       <div class="main-header__top main-header__top--gray no-js">
         <div class="main-header__container">
           <a class="logo" href="index.html">
