Поправил съехавшие блоки в firefox

--- a/form.html
+++ b/form.html
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="order-form__section order-form__section--name">
-            <div class="order-form__title">ФИО</div>
+            <div class="order-form__title order-form__title--name">ФИО</div>
             <div class="order-form__lines order-form__lines--name">
               <p class="order-form__line">
                 <label class="order-form__label order-form__label--f-name" for="f-name">Имя:</label>
