--- a/form.html
+++ b/form.html
@@ -79,7 +79,7 @@
           </div>
           <div class="order-form__section order-form__section--color">
             <div class="order-form__inner">
-              <div class="order-form__title">Цвет</div>
+              <div class="order-form__title order-form__title--color">Цвет</div>
               <div class="order-form__lines order-form__lines--color">
                 <p class="order-form__line">
                   <input class="order-form__checkbox" id="white" type="checkbox" name="white" checked>
